objects/Asset.object
<CustomObject>
    <fields>
        <fullName>OUV_Type_of_Sale_Description__c</fullName>
        <label>Type of Sale Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>Ambassador</fullName>
                </value>
                <value>
                    <fullName>Blue Chip</fullName>
                    <isActive>false</isActive>
                    <label>Blue Chip</label>
                </value>
                <value>
                    <fullName>British Forces Germany</fullName>
                </value>
                <value>
                    <fullName>Buffer Stock Floorplan</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Company Demonstrators</fullName>
                    <isActive>false</isActive>
                    <label>Company Demonstrators</label>
                </value>
                <value>
                    <fullName>Company Fleet - Lease</fullName>
                    <isActive>false</isActive>
                    <label>Company Fleet - Lease</label>
                </value>
                <value>
                    <fullName>Corporate Sales (viasupp</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Sales (viasupp</label>
                </value>
                <value>
                    <fullName>Courtesy, Loan Car</fullName>
                </value>
                <value>
                    <fullName>Courtesy / Loan Car</fullName>
                    <isActive>false</isActive>
                    <label>Courtesy / Loan Car</label>
                </value>
                <value>
                    <fullName>Customer Service, Courtesy, Loan Car</fullName>
                </value>
                <value>
                    <fullName>Daily Rental</fullName>
                </value>
                <value>
                    <fullName>Daily Rental no Buy Back</fullName>
                </value>
                <value>
                    <fullName>Daily Rental with Buy Back</fullName>
                </value>
                <value>
                    <fullName>Dealer Based Rental</fullName>
                    <isActive>false</isActive>
                    <label>Dealer Based Rental</label>
                </value>
                <value>
                    <fullName>Dealer Stock</fullName>
                    <isActive>false</isActive>
                    <label>Dealer Stock</label>
                </value>
                <value>
                    <fullName>Dealer Technician Fleet</fullName>
                </value>
                <value>
                    <fullName>Demonstrator</fullName>
                </value>
                <value>
                    <fullName>Development Test Vehicles</fullName>
                </value>
                <value>
                    <fullName>Diplomatic</fullName>
                </value>
                <value>
                    <fullName>Embassy</fullName>
                </value>
                <value>
                    <fullName>Employee - Dealer/Importer</fullName>
                    <isActive>false</isActive>
                    <label>Employee - Dealer/Importer</label>
                </value>
                <value>
                    <fullName>Employee - JLR</fullName>
                    <isActive>false</isActive>
                    <label>Employee - JLR</label>
                </value>
                <value>
                    <fullName>Employee - Suppliers</fullName>
                    <isActive>false</isActive>
                    <label>Employee - Suppliers</label>
                </value>
                <value>
                    <fullName>Employee - Tata Company</fullName>
                    <isActive>false</isActive>
                    <label>Employee - Tata Company</label>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                    <isActive>false</isActive>
                    <label>Engineering</label>
                </value>
                <value>
                    <fullName>Executive Vehicles /Comp</fullName>
                    <isActive>false</isActive>
                    <label>Executive Vehicles /Comp</label>
                </value>
                <value>
                    <fullName>Exhibitions/Motorshows</fullName>
                    <isActive>false</isActive>
                    <label>Exhibitions/Motorshows</label>
                </value>
                <value>
                    <fullName>Exhibitions / Motorshows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Handover_Transaction_Date__c</fullName>
        <label>Handover Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Last_Date_for_Spec_Change__c</fullName>
        <label>Last Date for Spec Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Planned_Port_Arrival_Date__c</fullName>
        <label>Planned Port Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vista_Load_Sandbox_Account_ID__c</fullName>
        <formula>$Label.Sandbox_Account_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vista Load Sandbox Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUV_Available_For_Free_Release__c</fullName>
        <label>Available For Free Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Brochure_Model_Description__c</fullName>
        <label>Brochure Model Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Derivative_Pack_Description__c</fullName>
        <label>Derivative Pack Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OUV_Detailed_Status_Description__c</fullName>
        <label>Detailed Status Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Classic_Vehicle_Programme_Type__c</fullName>
        <label>Classic Vehicle Programme Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Product_Offering</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OUV_Accepted_Delivery_Handover_Date__c</fullName>
        <label>Accepted Delivery/Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OUV_Requested_Delivery_Handover_Date__c</fullName>
        <label>Requested Delivery/Handover Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Vista_Vehicle</fullName>
        <active>true</active>
        <label>Vista Vehicle</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Classic_Vehicle</fullName>
        <active>true</active>
        <description>Used to capture a classic Jaguar/Land Rover/Daimler</description>
        <label>Classic Vehicle</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_Classic_Requires_Brand</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c)) &amp;&amp; RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; ISBLANK(  SO_Brand__c )</errorConditionFormula>
        <errorDisplayField>SO_Brand__c</errorDisplayField>
        <errorMessage>You must provide the brand</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Classic_Requires_Model</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c)) &amp;&amp; RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; ISBLANK( SO_Model__c )</errorConditionFormula>
        <errorDisplayField>SO_Model__c</errorDisplayField>
        <errorMessage>You must provide the model</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Classic_No_Space_In_Reg</fullName>
        <active>true</active>
        <description>Check if year&apos;s length is 4 digits and it&apos;s within range of Model&apos;s start and end year; skips Continuation Programme Type</description>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; 
NOT(ISBLANK( OUV_Registration_Number__c )) &amp;&amp; 
RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; 
 CONTAINS(OUV_Registration_Number__c , &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>OUV_Registration_Number__c</errorDisplayField>
        <errorMessage>Please do not include any spaces in the registration number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Classic_Long_VIN_validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c)) &amp;&amp; NOT(ISBLANK(OUV_Full_Vin__c )) &amp;&amp; RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; LEN(OUV_Full_Vin__c ) &gt; 17</errorConditionFormula>
        <errorDisplayField>OUV_Full_Vin__c</errorDisplayField>
        <errorMessage>Please enter a valid Full VIN</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Classic_Production_year_validation</fullName>
        <active>true</active>
        <description>Check if year&apos;s length is 4 digits and it&apos;s within range of Model&apos;s start and end year; skips Continuation Programme Type</description>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c )) &amp;&amp; NOT(ISBLANK(SO_Production_Year__c )) &amp;&amp; RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; NOT(ISPICKVAL(SO_Classic_Vehicle_Programme_Type__c,&apos;Continuation&apos;)) &amp;&amp; 
(NOT(LEN( SO_Production_Year__c ) == 4) || ISNUMBER(SO_Production_Year__c ) == FALSE || 
IF(NOT(ISBLANK(SO_Series_Name__c)),((NOT(ISBLANK(SO_Series_Name__r.SO_Model_Year_Start__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &lt; VALUE(SO_Series_Name__r.SO_Model_Year_Start__c)) ||
(NOT(ISBLANK(SO_Series_Name__r.SO_Model_Year_End__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &gt; VALUE(SO_Series_Name__r.SO_Model_Year_End__c ))),
IF(NOT(ISBLANK(SO_Model__c)),((NOT(ISBLANK(SO_Model__r.SO_Model_Year_Start__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &lt; VALUE(SO_Model__r.SO_Model_Year_Start__c)) ||
(NOT(ISBLANK(SO_Model__r.SO_Model_Year_End__c )) &amp;&amp; VALUE(SO_Production_Year__c ) &gt; VALUE(SO_Model__r.SO_Model_Year_End__c ))),FALSE)))</errorConditionFormula>
        <errorDisplayField>SO_Production_Year__c</errorDisplayField>
        <errorMessage>Please a valid year within corresponding model&apos;s range.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Classic_Mandatory_Fields_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISCHANGED(SO_Bypass_Validation_Rules__c)) &amp;&amp; RecordType.DeveloperName == &apos;SO_Classic_Vehicle&apos; &amp;&amp; ISBLANK(OUV_Full_Vin__c ) &amp;&amp; ISBLANK( OUV_Registration_Number__c )</errorConditionFormula>
        <errorDisplayField>OUV_Full_Vin__c</errorDisplayField>
        <errorMessage>Please enter Registration number or Full VIN</errorMessage>
    </validationRules>
</CustomObject>